1.菜单权限添加

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_620812_xa42vca4s8.css">
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="<%= BASE_URL %>static/zTreeStyle/zTreeStyle.css" />
     <title>vue-admin-manage</title>
   </head>
   <body>
@@ -16,3 +18,9 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<script src="<%= BASE_URL %>static/javascript/common.js"></script>
+<script type="text/javascript" src="<%= BASE_URL %>static/javascript/jquery.ztree.core.min.js"></script>
+<script type="text/javascript" src="<%= BASE_URL %>static/javascript/jquery.ztree.excheck.min.js"></script>
+<script type="text/javascript" src="<%= BASE_URL %>static/javascript/jquery.ztree.exedit.min.js"></script>
+<script type="text/javascript" src="<%= BASE_URL %>static/javascript/jquery.ztree.exhide.min.js"></script>
+<script src="<%= BASE_URL %>static/javascript/fuzzysearch.js"></script>
